--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
-    <h1>🩺 AI Medical Disease Predictor</h1>
+    <h1>🩺 Medova</h1>
 
     <form id="predict-form">
         <label for="symptoms">Enter Symptoms (comma separated):</label><br><br>
